<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/icon_cardview"
        android:layout_width="250dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/city_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_cardview">

        <TextView
            android:id="@+id/icon_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/icon"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/icon_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="3dp"
            android:gravity="center" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/temperature_cardview"
        android:layout_width="250dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/description_cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/temperature_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/temperature"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/temperature_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/description_cardview"
        android:layout_width="250dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/icon_cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_cardview">

        <TextView
            android:id="@+id/description_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/description"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/description_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/city_editText"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/ok_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_cardview" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_editText" />
</androidx.constraintlayout.widget.ConstraintLayout>